# face_reconstruction

./: CMakeLists.txt  README.md  main.cpp
libs/: BFM.h  CMakeLists.txt  DenseOptimizer.cpp  DenseOptimizer.h  LandmarkDetection.h  RGBD_Image.h  RegularizationTerm.h  Renderer.cpp  Renderer.h
